# xai-starship-sim

./: .gitignore  CLAUDE.md  LOGBOOK.md  README.md  pyproject.toml  requirements.txt  rocket_landing.py
.github/workflows/: ci-cd.yml
env/: config.py  demo_render.py  multi_rocket_viz.py  rewards.py  rocket_landing.py  rocket_landing_brax.py  rocket_landing_eureka.py  rocket_landing_warp.py
env/xml_files/: demo_v0.xml  rocket_v1_landing_legs.xml  rocket_v1_three_legs.xml  rocket_v2_three_legs.xml  single_rocket_test.xml
rocket_designs/: README.md  design_v0.md  design_v1.md  design_v2.md
sac/: config.yaml  eval.py  sac.py  utils.py
training/: config_ppo.yaml  config_ppo_cpu.yaml  train_ppo.py  utils_ppo.py
training/multi_rocket/: analyze_sweep.py  config.yaml  config_ppo.yaml  eval.py  run_seeds.sh  sweep_ppo.py  train.py  train_ppo.py  utils.py  utils_ppo.py
training/single_rocket/: config.yaml  eval.py  train.py  utils.py
xml_files/: single_rocket_test.xml
